--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="styles.css">
   <style>
+
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
@@ -23,11 +23,11 @@
     <p class="profile-bio">"Front-end developer and avid reader."</p>
   </div>
   <ul class="social-links">
-    <li><a href="">Github</a></li>
-    <li><a href="">Frontend mentor</a></li>
-    <li><a href="">Linkedin</a></li>
-    <li><a href="">Twitter</a></li>
-    <li><a href="">Instagram</a></li>
+    <li><a href="#">Github</a></li>
+    <li><a href="#">Frontend mentor</a></li>
+    <li><a href="#">Linkedin</a></li>
+    <li><a href="#">Twitter</a></li>
+    <li><a href="#">Instagram</a></li>
   </ul>
 </main>
   
